# FATE

./: .gitignore  FATE_APISpecification.md  FATE_DatabaseDesign.md  FATE_SRS.md  FATE_TechStack.md  README.md  fate.py  monastic_horizon.md  proceed_the_next.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: browser_agent.py  calendar_agent.py  coding_agent.py  communication_agent.py  desktop_agent.py  filesystem_agent.py  vision_agent.py
backend/app/api/: brain_routes.py  memory_routes.py  voice_routes.py
backend/app/core/: brain.py  db.py  llm_client.py  macos_accessibility.py  memory_graph.py  orchestrator.py  security.py  vector_db.py  voice.py  write_manager.py
backend/app/gemini_live/: analytics.py  jarvis_bridge.py  pc_automation.py  security.py  vision_screen.py  voice_stream.py
backend/app/models/: schemas.py
backend/tests/: test_agent_factory_module.py  test_agents.py  test_analytics_platform_module.py  test_brain.py  test_browser.py  test_browser_agent_module.py  test_chatbot_core.py  test_cloud_engine_module.py  test_core.py  test_desktop_os_agent.py  test_evolution_engine_module.py  test_gemini_live_module.py  test_integration_platform_module.py  test_jarvis_core_module.py  test_knowledge_graph.py  test_mcp_ecosystem.py  test_memory.py  test_mobile_agent_module.py  test_predictive_engine_module.py  test_security_engine.py  test_specialized_agents.py  test_tools_ecosystem.py  test_vision.py  test_voice.py  test_workflow_engine.py
frontend/: package-lock.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+164 files in other folders)
