[project]
name = "fate-backend"
version = "0.1.0"
description = "FastAPI backend loopback and Specialized Agents for Project FATE"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlmodel>=0.0.16",
    "qdrant-client>=1.8.0",
    "fastembed>=0.2.0",
    "playwright>=1.42.0",
    "pyobjc-core>=10.1",
    "pyobjc-framework-Cocoa>=10.1",
    "cryptography>=42.0.0",
    "pydantic>=2.6.0",
    "watchdog>=4.0.0",
    "websockets>=12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
